project/static/css/style.css
div.navbar-header img {
    width: 30px;
    float: left;
    margin-top: 7px;
    margin-right: 7px;
}

div#list-detail-container {
  width: 80%;
  border: 1px;
  border-color: #ccc;
  border-radius: 5px;
  padding: 10px;
  position: absolute;
  top: 100px;
  left: 10%;
  background-color: #f3f3f3;*/
  display: none;
}

div#blackout-screen {
  position:fixed;
  top: 0;
  left: 0;
  background-color: rgba(64, 64, 64, 0.75);
  height: 100%;
  width: 100%;
  display: none;
}

.form-signin {
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
}
.form-signin .form-signin-heading,
.form-signin .checkbox {
  margin-bottom: 10px;
}
.form-signin .checkbox {
  font-weight: normal;
}
.form-signin .form-control {
  position: relative;
  height: auto;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  padding: 10px;
  font-size: 16px;
}
.form-signin .form-control:focus {
  z-index: 2;
}
.form-signin input[type="email"] {
  margin-bottom: -1px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}
.form-signin input[type="password"] {
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.ui-icon {
  width: 100px;
  height: 100px;
}

div.melon-summary img {
    width: 200px;
}

div.melon-summary {
    display: inline-block;

    width: 300px;
    vertical-align: top;
    margin-right: 20px;
    margin-bottom: 20px;
    padding-left: 10px;
    padding-bottom: 20px;
}

li.warning {
    color: red;
}

img.product-img {
    display: inline-block;
    max-width: 400px;
}

div.cart {
    display: inline-block;
    vertical-align: top;
    margin-left: 30px;
}

img.melon-cart {
  height: 15px;
}

div#promotion {
  position: fixed;
  width: 600px;
  border: 3px;
  border-color: #545454;
  top: 100px;
  left: 50%;
  margin-left: -300px;
  color: red;
}

